# solana-cloned-validator

./: Cargo.toml  README.md
.github/workflows/: ci-code-review.yml
src/: cloner.rs  lib.rs  main.rs  runner.rs
src/cli/: mod.rs
tests/: test_app.rs
tests/resources/: metaplex.json  usdc.json
