[package]
name = "solana-cloned-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-test-validator = "2.0.2"
solana-sdk = "2.0.2"
solana-rpc = "2.0.2"
solana-client = "2.0.2"
spl-token-client = "0.11.0"
serde_json = "1.0.122"
base64 = "0.22.1"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
name = "solana_cloned_validator"
path = "src/lib.rs"

[[bin]]
name = "solana-cloned-validator-bin"
path = "src/main.rs"

[profile.dev]
incremental = true
